--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ header {
 }
 header>button {
     display: block;
-    position: absolute;
+    position: fixed;
     right: 2.2rem;
     z-index: 10;
 }
